fix: fixed alert spacing in profile page

--- a/src/pages/auth/profile/Profile.scss
+++ b/src/pages/auth/profile/Profile.scss
@@ -87,3 +87,12 @@
 .Cart-message-empty {
   margin: 2rem;
 }
+
+.Profile-Alert-Container {
+  max-width: 350px;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  margin: 0 auto;
+  margin-bottom: 10px;
+}
